--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
-	<title>Aaron Mcnulty, Technical Architect</title>
+	<title>Jane Roe, Business Development Manager</title>
 	<link rel="stylesheet" href="aboutme.css">
+	<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|PT+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet">
 </head>
 <body>
 <section class="left">
@@ -16,53 +18,136 @@
 		<p>Business Development Manager</p>
 	</div>
 
-	<div>
+	<div class="intro">
 		<p>
 			Professional Business Developer with more than four years of experience in the business development process. Involved in product testing, management, and development of new business opportunities.
 		</p>
 	</div>
 
-	<h2>Skills</h2>
+	<section class="section">
+		<h2>Skills</h2>
 
-	<p>
-		Blah... blah... blah...
-	</p>
+		<p>
+			Blah... blah... blah...
+		</p>
+	</section>
 
-	<h2>Work Experience</h2>
+	<section class="section">
+		<h2>Work Experience (11.5 Years)</h2>
 
-	<p>
-		Blah... blah... blah...
-	</p>
+		<h3>Technical Architect</h3>
 
-	<h2>Education</h2>
+		<h4>Apttus</h4>
 
-	<p>
-		Blah... blah... blah...
-	</p>
+		<div>
+			<span>05/2016</span>
+			<span>-</span>
+			<span>Present</span>
+		</div>
 
-	<h2>Achievement</h2>
+		<h5>Achievements / Tasks</h5>
 
-	<p>
-		Blah... blah... blah...
-	</p>
+		<ul>
+			<li>Designed and developed an editor to craft dynamic UI</li>
+			<li>Invented strategy to render fast rendering dynamic UIs</li>
+			<li>Created an UI Community driven by Game based concepts</li>
+			<li>Standardized the development practices in UI</li>
+		</ul>
 
-	<h2>Personal Projects</h2>
+		<p>
+			<span>Contact:</span>
+			<span>Arvind Ramchandra</span>
+		</p>
 
-	<p>
-		Blah... blah... blah...
-	</p>
+		<h3>Technical Leader</h3>
 
-	<h2>Languages</h2>
+		<h4>Euromonitor International</h4>
 
-	<p>
-		Blah... blah... blah...
-	</p>
+		<div>
+			<span>04/2015</span>
+			<span>-</span>
+			<span>04/2016</span>
+		</div>
+		<h5>Achievements / Tasks</h5>
 
-	<h2>Interests</h2>
+		<ul>
+			<li>Lead an young energetic team for re-engieering the statistics module</li>
+			<li>Developed an initiative that helps to take surveys</li>
+		</ul>
 
-	<p>
-		Blah... blah... blah...
-	</p>
+		<p>
+			<span>Contact:</span>
+			<span>Murugan</span>
+		</p>
+
+		<h3>Associate Architect</h3>
+
+		<h4>Indecomm Global Services</h4>
+
+		<div>
+			<span>12/2013</span>
+			<span>-</span>
+			<span>04/2015</span>
+		</div>
+
+		<h5>Achievements / Tasks</h5>
+
+		<ul>
+			<li>Lead a team of 10 members on building modern single page apps</li>
+			<li>Created a mobile app to store secrets (hackathon)</li>
+		</ul>
+
+		<p>
+			<span>Contact:</span>
+			<span>Rakesh Rajashekaran</span>
+		</p>
+	</section>
+
+	<section class="section">
+		<h2>Education</h2>
+
+		<h3>The Rajaas Engineering College</h3>
+
+		<div>
+			<span>06/2000</span>
+			<span>-</span>
+			<span>05/2004</span>
+		</div>
+
+		<h4>Electronics &amp; Communication Enginnering</h4>
+	</section>
+
+	<section class="section">
+		<h2>Achievement</h2>
+
+		<p>
+			Blah... blah... blah...
+		</p>
+	</section>
+
+	<section class="section">
+		<h2>Personal Projects</h2>
+
+		<p>
+			Blah... blah... blah...
+		</p>
+	</section>
+
+	<section class="section">
+		<h2>Languages</h2>
+
+		<p>
+			Blah... blah... blah...
+		</p>
+	</section>
+
+	<section class="section">
+		<h2>Interests</h2>
+
+		<p>
+			Blah... blah... blah...
+		</p>
+	</section>
 </section>
 </body>
 </html>
