--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Jane Roe, Business Development Manager</title>
 	<link rel="stylesheet" href="aboutme.css">
-	<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|PT+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -15,7 +15,35 @@
 <section class="right">
 	<div class="head">
 		<h1>Jane Roe</h1>
+
 		<p>Business Development Manager</p>
+
+		<div class="social-links">
+			<div>
+				<span class="icon">📧</span>
+				<span class="text">janeroe@gmail.com</span>
+			</div>
+
+			<div>
+				<span class="icon">📱</span>
+				<span class="text">+91 9741897352</span>
+			</div>
+
+			<div>
+				<span class="icon">📍</span>
+				<span class="text">Whitefield, Bangalore, India</span>
+			</div>
+
+			<div>
+				<span class="icon">👅</span>
+				<span class="text">github.com/VJAI</span>
+			</div>
+
+			<div>
+				<span class="icon">🥡</span>
+				<span class="text">VJAI</span>
+			</div>
+		</div>
 	</div>
 
 	<div class="intro">
