--- a/index.html
+++ b/index.html
@@ -55,9 +55,38 @@
 	<section class="section">
 		<h2>Skills</h2>
 
-		<p>
-			Blah... blah... blah...
-		</p>
+		<div class="chips">
+			<div class="chip">HTML</div>
+			<div class="chip">CSS</div>
+			<div class="chip">JavaScript</div>
+			<div class="chip">.NET</div>
+			<div class="chip">C#</div>
+			<div class="chip">ASP.NET</div>
+			<div class="chip">ADO.NET</div>
+			<div class="chip">Salesforce</div>
+			<div class="chip">SQL</div>
+			<div class="chip">TypeScript</div>
+			<div class="chip">HTML</div>
+			<div class="chip">CSS</div>
+			<div class="chip">JavaScript</div>
+			<div class="chip">.NET</div>
+			<div class="chip">C#</div>
+			<div class="chip">ASP.NET</div>
+			<div class="chip">ADO.NET</div>
+			<div class="chip">Salesforce</div>
+			<div class="chip">SQL</div>
+			<div class="chip">TypeScript</div>
+			<div class="chip">HTML</div>
+			<div class="chip">CSS</div>
+			<div class="chip">JavaScript</div>
+			<div class="chip">.NET</div>
+			<div class="chip">C#</div>
+			<div class="chip">ASP.NET</div>
+			<div class="chip">ADO.NET</div>
+			<div class="chip">Salesforce</div>
+			<div class="chip">SQL</div>
+			<div class="chip">TypeScript</div>
+		</div>
 	</section>
 
 	<section class="section">
