--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
 		</div>
 	</div>
 
-	<div class="intro">
+	<section class="section intro">
+		<h2>Intro</h2>
+
 		<p>
 			Professional Business Developer with more than four years of experience in the business development process. Involved in product testing, management, and development of new business opportunities.
 		</p>
-	</div>
+	</section>
 
 	<section class="section">
 		<h2>Skills</h2>
