--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <head>
 	<title>Jane Roe, Business Development Manager</title>
 	<link rel="stylesheet" href="aboutme.css">
-	<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|PT+Sans:400,400i,700,700i&display=swap"
+	      rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet">
 </head>
 <body>
 <section class="left">
 	<picture>
-		<img src="https://images.unsplash.com/flagged/photo-1563536310477-c7b4e3a800c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1834&q=80" />
+		<img
+			src="https://images.unsplash.com/flagged/photo-1563536310477-c7b4e3a800c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1834&q=80"/>
 	</picture>
 </section>
 
@@ -16,7 +18,7 @@
 	<div class="head">
 		<h1>Jane Roe</h1>
 
-		<p>Business Development Manager</p>
+		<p>Chief Technical Architect</p>
 
 		<div class="social-links">
 			<div>
@@ -50,7 +52,8 @@
 		<h2>Intro</h2>
 
 		<p>
-			Professional Business Developer with more than four years of experience in the business development process. Involved in product testing, management, and development of new business opportunities.
+			Professional Business Developer with more than four years of experience in the business development process.
+			Involved in product testing, management, and development of new business opportunities.
 		</p>
 	</section>
 
@@ -92,120 +95,150 @@
 	</section>
 
 	<section class="section">
+
 		<h2>Work Experience (11.5 Years)</h2>
 
-		<h3>Technical Architect</h3>
+		<div class="experience">
+			<div class="top-row">
+				<h3>Technical Architect&nbsp;&nbsp;|&nbsp;&nbsp;Apttus</h3>
 
-		<h4>Apttus</h4>
+				<div class="duration">
+					<span>05/2016</span>
+					<span>-</span>
+					<span>Present</span>
+				</div>
+			</div>
 
-		<div>
-			<span>05/2016</span>
-			<span>-</span>
-			<span>Present</span>
+			<h4>Achievements / Tasks</h4>
+
+			<ul>
+				<li>Designed and developed an editor to craft dynamic UI</li>
+				<li>Invented strategy to render fast rendering dynamic UIs</li>
+				<li>Created an UI Community driven by Game based concepts</li>
+				<li>Standardized the development practices in UI</li>
+				<li>Lorem ipsum doloe smit ameit</li>
+			</ul>
+
+			<p class="manager">
+				<span>Contact:</span>
+				<span>Arvind Ramchandra</span>
+			</p>
 		</div>
 
-		<h5>Achievements / Tasks</h5>
+		<div class="experience">
 
-		<ul>
-			<li>Designed and developed an editor to craft dynamic UI</li>
-			<li>Invented strategy to render fast rendering dynamic UIs</li>
-			<li>Created an UI Community driven by Game based concepts</li>
-			<li>Standardized the development practices in UI</li>
-		</ul>
+			<div class="top-row">
+				<h3>Technical Leader&nbsp;&nbsp;|&nbsp;&nbsp;Euromonitor International</h3>
 
-		<p>
-			<span>Contact:</span>
-			<span>Arvind Ramchandra</span>
-		</p>
+				<div class="duration">
+					<span>04/2015</span>
+					<span>-</span>
+					<span>04/2016</span>
+				</div>
+			</div>
 
-		<h3>Technical Leader</h3>
+			<h4>Achievements / Tasks</h4>
 
-		<h4>Euromonitor International</h4>
+			<ul>
+				<li>Lead an young energetic team for re-engieering the statistics module</li>
+				<li>Developed an initiative that helps to take surveys</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+			</ul>
 
-		<div>
-			<span>04/2015</span>
-			<span>-</span>
-			<span>04/2016</span>
-		</div>
-		<h5>Achievements / Tasks</h5>
-
-		<ul>
-			<li>Lead an young energetic team for re-engieering the statistics module</li>
-			<li>Developed an initiative that helps to take surveys</li>
-		</ul>
-
-		<p>
-			<span>Contact:</span>
-			<span>Murugan</span>
-		</p>
-
-		<h3>Associate Architect</h3>
-
-		<h4>Indecomm Global Services</h4>
-
-		<div>
-			<span>12/2013</span>
-			<span>-</span>
-			<span>04/2015</span>
+			<p class="manager">
+				<span>Contact:</span>
+				<span>Murugan</span>
+			</p>
 		</div>
 
-		<h5>Achievements / Tasks</h5>
+		<div class="experience">
+			<div class="top-row">
+				<h3>Associate Architect&nbsp;&nbsp;|&nbsp;&nbsp;Indecomm Global Services</h3>
 
-		<ul>
-			<li>Lead a team of 10 members on building modern single page apps</li>
-			<li>Created a mobile app to store secrets (hackathon)</li>
-		</ul>
+				<div class="duration">
+					<span>12/2013</span>
+					<span>-</span>
+					<span>04/2015</span>
+				</div>
+			</div>
 
-		<p>
-			<span>Contact:</span>
-			<span>Rakesh Rajashekaran</span>
-		</p>
+			<h4>Achievements / Tasks</h4>
+
+			<ul>
+				<li>Lead a team of 10 members on building modern single page apps</li>
+				<li>Created a mobile app to store secrets (hackathon)</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+			</ul>
+
+			<p class="manager">
+				<span>Contact:</span>
+				<span>Rakesh Rajashekaran</span>
+			</p>
+		</div>
 	</section>
 
 	<section class="section">
 		<h2>Education</h2>
 
-		<h3>The Rajaas Engineering College</h3>
+		<div class="education">
+			<div class="top-row">
+				<h3>The Rajaas Engineering College</h3>
 
-		<div>
-			<span>06/2000</span>
-			<span>-</span>
-			<span>05/2004</span>
+				<div class="duration">
+					<span>06/2000</span>
+					<span>-</span>
+					<span>05/2004</span>
+				</div>
+			</div>
+
+			<h4>Electronics &amp; Communication Enginnering</h4>
 		</div>
-
-		<h4>Electronics &amp; Communication Enginnering</h4>
 	</section>
 
 	<section class="section">
-		<h2>Achievement</h2>
+		<h2>Achievements</h2>
 
-		<p>
-			Blah... blah... blah...
-		</p>
+		<ul>
+			<li>Created an application to manage appraisal process</li>
+			<li>Created a Survey Application</li>
+			<li>Auto Document Creator from Source Code</li>
+			<li>Created an UI community based on gamification</li>
+		</ul>
 	</section>
 
 	<section class="section">
 		<h2>Personal Projects</h2>
 
-		<p>
-			Blah... blah... blah...
-		</p>
+		<ul>
+			<li>JustBlog</li>
+			<li>Safe</li>
+			<li>musquito</li>
+			<li>lego</li>
+		</ul>
 	</section>
 
 	<section class="section">
 		<h2>Languages</h2>
 
-		<p>
-			Blah... blah... blah...
-		</p>
+		<ul>
+			<li>English</li>
+			<li>Tamil</li>
+		</ul>
 	</section>
 
 	<section class="section">
 		<h2>Interests</h2>
 
-		<p>
-			Blah... blah... blah...
-		</p>
+		<ul>
+			<li>Open Source Development</li>
+			<li>Learning new stuff</li>
+			<li>Building stuff</li>
+			<li>Blogging</li>
+		</ul>
 	</section>
 </section>
 </body>
