--- a/index.html
+++ b/index.html
@@ -66,10 +66,6 @@
 			<div class="chip">JavaScript</div>
 			<div class="chip">.NET</div>
 			<div class="chip">C#</div>
-			<div class="chip">ASP.NET</div>
-			<div class="chip">ADO.NET</div>
-			<div class="chip">Salesforce</div>
-			<div class="chip">SQL</div>
 			<div class="chip">TypeScript</div>
 			<div class="chip">HTML</div>
 			<div class="chip">CSS</div>
@@ -80,7 +76,7 @@
 			<div class="chip">ADO.NET</div>
 			<div class="chip">Salesforce</div>
 			<div class="chip">SQL</div>
-			<div class="chip">TypeScript</div>
+			<div class="chip">ASP.NET</div>
 			<div class="chip">HTML</div>
 			<div class="chip">CSS</div>
 			<div class="chip">JavaScript</div>
@@ -88,9 +84,9 @@
 			<div class="chip">C#</div>
 			<div class="chip">ASP.NET</div>
 			<div class="chip">ADO.NET</div>
+			<div class="chip">ADO.NET</div>
 			<div class="chip">Salesforce</div>
 			<div class="chip">SQL</div>
-			<div class="chip">TypeScript</div>
 		</div>
 	</section>
 
@@ -224,20 +220,49 @@
 	<section class="section">
 		<h2>Languages</h2>
 
-		<ul>
-			<li>English</li>
-			<li>Tamil</li>
-		</ul>
+		<table class="language-table" cellpadding="0" cellspacing="0">
+			<thead>
+			<tr>
+				<th></th>
+				<th>Speak</th>
+				<th>Write</th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr>
+				<td>English</td>
+				<td class="center">Yes</td>
+				<td class="center">Yes</td>
+			</tr>
+			<tr>
+				<td>Tamil</td>
+				<td class="center">Yes</td>
+				<td class="center">Yes</td>
+			</tr>
+			<tr>
+				<td>Hindi</td>
+				<td class="center">Yes</td>
+				<td class="center">No</td>
+			</tr>
+			</tbody>
+		</table>
 	</section>
 
 	<section class="section">
 		<h2>Interests</h2>
 
-		<ul>
+		<ul class="interests">
 			<li>Open Source Development</li>
 			<li>Learning new stuff</li>
 			<li>Building stuff</li>
 			<li>Blogging</li>
+			<li>Guitar</li>
+			<li>Listening to music</li>
+			<li>Painting</li>
+			<li>Killing Musquitoes</li>
+			<li>Watching Stupid Movies</li>
+			<li>Working With Illuminati</li>
+			<li>Finding My History</li>
 		</ul>
 	</section>
 </section>
