--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <section class="left">
-	<picture>
+	<!--<picture>
 		<img
 			src="https://images.unsplash.com/flagged/photo-1563536310477-c7b4e3a800c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1834&q=80"/>
-	</picture>
+	</picture>-->
 </section>
 
 <section class="right">
