--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
 </head>
 <body>
 <section class="left">
-	<!--<picture>
-		<img
-			src="https://images.unsplash.com/flagged/photo-1563536310477-c7b4e3a800c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1834&q=80"/>
-	</picture>-->
 </section>
 
 <section class="right">
@@ -28,12 +24,12 @@
 
 			<div>
 				<span class="icon">📱</span>
-				<span class="text">+91 9741897352</span>
+				<span class="text">9741897352</span>
 			</div>
 
 			<div>
 				<span class="icon">📍</span>
-				<span class="text">Whitefield, Bangalore, India</span>
+				<span class="text">Bangalore, India</span>
 			</div>
 
 			<div>
@@ -261,7 +257,7 @@
 			<li>Painting</li>
 			<li>Killing Musquitoes</li>
 			<li>Watching Stupid Movies</li>
-			<li>Working With Illuminati</li>
+			<li>Killing Illuminati</li>
 			<li>Finding My History</li>
 		</ul>
 	</section>
