--- a/index.html
+++ b/index.html
@@ -104,16 +104,18 @@
 			<h4>Achievements / Tasks</h4>
 
 			<ul>
-				<li>Designed and developed an editor to craft dynamic UI</li>
-				<li>Invented strategy to render fast rendering dynamic UIs</li>
-				<li>Created an UI Community driven by Game based concepts</li>
-				<li>Standardized the development practices in UI</li>
-				<li>Lorem ipsum doloe smit ameit</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
 			</ul>
 
 			<p class="manager">
 				<span>Contact:</span>
-				<span>Arvind Ramchandra</span>
+				<span>Arvind Ramchandra, Senior Manager</span>
 			</p>
 		</div>
 
@@ -132,16 +134,18 @@
 			<h4>Achievements / Tasks</h4>
 
 			<ul>
-				<li>Lead an young energetic team for re-engieering the statistics module</li>
-				<li>Developed an initiative that helps to take surveys</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
 				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
 				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
 				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
 			</ul>
 
 			<p class="manager">
 				<span>Contact:</span>
-				<span>Murugan</span>
+				<span>Murugan, Team Lead</span>
 			</p>
 		</div>
 
@@ -159,16 +163,18 @@
 			<h4>Achievements / Tasks</h4>
 
 			<ul>
-				<li>Lead a team of 10 members on building modern single page apps</li>
-				<li>Created a mobile app to store secrets (hackathon)</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
 				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
 				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
 				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar.</li>
 			</ul>
 
 			<p class="manager">
 				<span>Contact:</span>
-				<span>Rakesh Rajashekaran</span>
+				<span>Rakesh Rajashekaran, PMP</span>
 			</p>
 		</div>
 	</section>
@@ -188,6 +194,34 @@
 			</div>
 
 			<h4>Electronics &amp; Communication Enginnering</h4>
+		</div>
+
+		<div class="education">
+			<div class="top-row">
+				<h3>Sethu Laskhmi Bai Higher Secondary School</h3>
+
+				<div class="duration">
+					<span>06/1998</span>
+					<span>-</span>
+					<span>05/2000</span>
+				</div>
+			</div>
+
+			<h4>Higher Secondary</h4>
+		</div>
+
+		<div class="education">
+			<div class="top-row">
+				<h3>ST. Mary Goretty Higher Secondary School</h3>
+
+				<div class="duration">
+					<span>06/1992</span>
+					<span>-</span>
+					<span>05/2000</span>
+				</div>
+			</div>
+
+			<h4>10th Education</h4>
 		</div>
 	</section>
 
