--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 	<title>Jane Roe, Business Development Manager</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="aboutme.css">
 	<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|PT+Sans:400,400i,700,700i&display=swap"
 	      rel="stylesheet">
