--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 	<link rel="stylesheet" href="aboutme.css">
 	<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|PT+Sans:400,400i,700,700i&display=swap"
 	      rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet">
 </head>
 <body>
 <section class="left">
 </section>
 
 <section class="right">
+	<div class="scrim"></div>
+
 	<div class="head">
 		<h1>Jane Roe</h1>
 
