--- a/index.html
+++ b/index.html
@@ -253,32 +253,40 @@
 	<section class="section">
 		<h2>Languages</h2>
 
-		<table class="language-table" cellpadding="0" cellspacing="0">
-			<thead>
-			<tr>
-				<th></th>
-				<th>Speak</th>
-				<th>Write</th>
-			</tr>
-			</thead>
-			<tbody>
-			<tr>
-				<td>English</td>
-				<td class="center">Yes</td>
-				<td class="center">Yes</td>
-			</tr>
-			<tr>
-				<td>Tamil</td>
-				<td class="center">Yes</td>
-				<td class="center">Yes</td>
-			</tr>
-			<tr>
-				<td>Hindi</td>
-				<td class="center">Yes</td>
-				<td class="center">No</td>
-			</tr>
-			</tbody>
-		</table>
+		<div class="languages">
+			<div class="language">
+				<div>English</div>
+				<div class="fluency">
+					<span class="selected"></span>
+					<span class="selected"></span>
+					<span class="selected"></span>
+					<span class="selected"></span>
+					<span></span>
+				</div>
+			</div>
+
+			<div class="language">
+				<div>Tamil</div>
+				<div class="fluency">
+					<span class="selected"></span>
+					<span class="selected"></span>
+					<span class="selected"></span>
+					<span class="selected"></span>
+					<span></span>
+				</div>
+			</div>
+
+			<div class="language">
+				<div>Hindi</div>
+				<div class="fluency">
+					<span class="selected"></span>
+					<span class="selected"></span>
+					<span class="selected"></span>
+					<span></span>
+					<span></span>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<section class="section">
