--- a/index.html
+++ b/index.html
@@ -242,12 +242,119 @@
 	<section class="section">
 		<h2>Personal Projects</h2>
 
-		<ul>
-			<li>JustBlog</li>
-			<li>Safe</li>
-			<li>musquito</li>
-			<li>lego</li>
-		</ul>
+		<div class="cards">
+			<div class="card">
+				<div class="card-left">
+					<img src="assets/project-1.jpeg" width="150px" />
+				</div>
+				<div class="card-right">
+					<h4><a href="#">l.e.g.o</a></h4>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.
+					</p>
+					<div class="reputation">
+						<div>
+							<span>Stars:</span>
+							<span>100</span>
+						</div>
+
+						<div>
+							<span>Watchers:</span>
+							<span>100</span>
+						</div>
+
+						<div>
+							<span>Forks:</span>
+							<span>100</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="card">
+				<div class="card-left">
+					<img src="assets/project-2.jpeg" width="150px" />
+				</div>
+				<div class="card-right">
+					<h4><a href="#">musquito</a></h4>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.
+					</p>
+					<div class="reputation">
+						<div>
+							<span>Stars:</span>
+							<span>100</span>
+						</div>
+
+						<div>
+							<span>Watchers:</span>
+							<span>100</span>
+						</div>
+
+						<div>
+							<span>Forks:</span>
+							<span>100</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="card">
+				<div class="card-left">
+					<img src="assets/project-3.jpeg" width="150px" />
+				</div>
+				<div class="card-right">
+					<h4><a href="#">JustBlog</a></h4>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.
+					</p>
+					<div class="reputation">
+						<div>
+							<span>Stars:</span>
+							<span>100</span>
+						</div>
+
+						<div>
+							<span>Watchers:</span>
+							<span>100</span>
+						</div>
+
+						<div>
+							<span>Forks:</span>
+							<span>100</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="card">
+				<div class="card-left">
+					<img src="assets/project-4.jpeg" width="150px" />
+				</div>
+				<div class="card-right">
+					<h4><a href="#">fibonacci</a></h4>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar, risus ac porta sagittis.
+					</p>
+					<div class="reputation">
+						<div>
+							<span>Stars:</span>
+							<span>100</span>
+						</div>
+
+						<div>
+							<span>Watchers:</span>
+							<span>100</span>
+						</div>
+
+						<div>
+							<span>Forks:</span>
+							<span>100</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<section class="section">
