--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
 
 		<p>Chief Technical Architect</p>
 
-		<div class="social-links">
+		<div class="contact-info">
 			<div>
-				<span class="icon">📧</span>
+				<i class="icon icon-mail">&#xe800;</i>
 				<span class="text">janeroe@gmail.com</span>
 			</div>
 
 			<div>
-				<span class="icon">📱</span>
+				<i class="icon icon-mobile">&#xe802;</i>
 				<span class="text">9741897352</span>
 			</div>
 
 			<div>
-				<span class="icon">📍</span>
+				<i class="icon icon-location">&#xe801;</i>
 				<span class="text">Bangalore, India</span>
 			</div>
 
 			<div>
-				<span class="icon">👅</span>
+				<i class="icon icon-github">&#xf113;</i>
 				<span class="text">github.com/VJAI</span>
 			</div>
 
 			<div>
-				<span class="icon">🥡</span>
+				<i class="icon icon-stackoverflow">&#xf16c;</i>
 				<span class="text">VJAI</span>
 			</div>
 		</div>
@@ -413,6 +413,14 @@
 			<li>Finding My History</li>
 		</ul>
 	</section>
+
+	<footer>
+		<section class="social-links">
+			<i class="icon icon-facebook-official">&#xf230;</i>
+			<i class="icon icon-twitter">&#xf309;</i>
+			<i class="icon icon-squared">&#xf30c;</i>
+		</section>
+	</footer>
 </section>
 </body>
 </html>
