--- a/index.html
+++ b/index.html
@@ -20,30 +20,30 @@
 		<p>Chief Technical Architect</p>
 
 		<div class="contact-info">
-			<div>
+			<a href="#">
 				<i class="icon icon-mail">&#xe800;</i>
 				<span class="text">janeroe@gmail.com</span>
-			</div>
+			</a>
 
-			<div>
+			<a href="#">
 				<i class="icon icon-mobile">&#xe802;</i>
 				<span class="text">9741897352</span>
-			</div>
+			</a>
 
-			<div>
+			<a href="#">
 				<i class="icon icon-location">&#xe801;</i>
 				<span class="text">Bangalore, India</span>
-			</div>
+			</a>
 
-			<div>
+			<a href="#">
 				<i class="icon icon-github">&#xf113;</i>
 				<span class="text">github.com/VJAI</span>
-			</div>
+			</a>
 
-			<div>
+			<a href="#">
 				<i class="icon icon-stackoverflow">&#xf16c;</i>
 				<span class="text">VJAI</span>
-			</div>
+			</a>
 		</div>
 	</div>
 
@@ -91,11 +91,11 @@
 
 	<section class="section">
 
-		<h2>Work Experience (11.5 Years)</h2>
+		<h2>Work Experience (10 Years)</h2>
 
 		<div class="experience">
 			<div class="top-row">
-				<h3>Technical Architect&nbsp;&nbsp;|&nbsp;&nbsp;Apttus</h3>
+				<h3>Technical Architect&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Apttus</a></h3>
 
 				<div class="duration">
 					<span>05/2016</span>
@@ -125,7 +125,7 @@
 		<div class="experience">
 
 			<div class="top-row">
-				<h3>Technical Leader&nbsp;&nbsp;|&nbsp;&nbsp;Euromonitor International</h3>
+				<h3>Technical Leader&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Euromonitor International</a></h3>
 
 				<div class="duration">
 					<span>04/2015</span>
@@ -154,7 +154,7 @@
 
 		<div class="experience">
 			<div class="top-row">
-				<h3>Associate Architect&nbsp;&nbsp;|&nbsp;&nbsp;Indecomm Global Services</h3>
+				<h3>Associate Architect&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Indecomm Global Services</a></h3>
 
 				<div class="duration">
 					<span>12/2013</span>
@@ -416,9 +416,15 @@
 
 	<footer>
 		<section class="social-links">
-			<i class="icon icon-facebook-official">&#xf230;</i>
-			<i class="icon icon-twitter">&#xf309;</i>
-			<i class="icon icon-squared">&#xf30c;</i>
+			<a href="#">
+				<i class="icon icon-facebook-official">&#xf230;</i>
+			</a>
+			<a href="#">
+				<i class="icon icon-twitter">&#xf309;</i>
+			</a>
+			<a href="#">
+				<i class="icon icon-squared">&#xf30c;</i>
+			</a>
 		</section>
 	</footer>
 </section>
