--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 		<div class="experience">
 			<div class="top-row">
-				<h3>Technical Architect&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Apttus</a></h3>
+				<h3>Technical Architect, Apttus</h3>
 
 				<div class="duration">
 					<span>05/2016</span>
@@ -125,7 +125,7 @@
 		<div class="experience">
 
 			<div class="top-row">
-				<h3>Technical Leader&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Euromonitor International</a></h3>
+				<h3>Technical Leader, Euromonitor International</h3>
 
 				<div class="duration">
 					<span>04/2015</span>
@@ -154,7 +154,7 @@
 
 		<div class="experience">
 			<div class="top-row">
-				<h3>Associate Architect&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Indecomm Global Services</a></h3>
+				<h3>Associate Architect, Indecomm Global Services</h3>
 
 				<div class="duration">
 					<span>12/2013</span>
@@ -245,7 +245,7 @@
 		<div class="cards">
 			<div class="card">
 				<div class="card-left">
-					<img src="assets/project-1.jpeg" width="150px" />
+					<img src="assets/project-1.jpeg" />
 				</div>
 				<div class="card-right">
 					<h4><a href="#">l.e.g.o</a></h4>
@@ -273,7 +273,7 @@
 
 			<div class="card">
 				<div class="card-left">
-					<img src="assets/project-2.jpeg" width="150px" />
+					<img src="assets/project-2.jpeg" />
 				</div>
 				<div class="card-right">
 					<h4><a href="#">musquito</a></h4>
@@ -301,7 +301,7 @@
 
 			<div class="card">
 				<div class="card-left">
-					<img src="assets/project-3.jpeg" width="150px" />
+					<img src="assets/project-3.jpeg" />
 				</div>
 				<div class="card-right">
 					<h4><a href="#">JustBlog</a></h4>
@@ -329,7 +329,7 @@
 
 			<div class="card">
 				<div class="card-left">
-					<img src="assets/project-4.jpeg" width="150px" />
+					<img src="assets/project-4.jpeg" />
 				</div>
 				<div class="card-right">
 					<h4><a href="#">fibonacci</a></h4>
