--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Jane Roe, Business Development Manager</title>
+	<title>Jane Roe, Chief Technical Architect</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="aboutme.css">
@@ -27,7 +27,7 @@
 
 			<a href="#">
 				<i class="icon icon-mobile">&#xe802;</i>
-				<span class="text">9741897352</span>
+				<span class="text">9876543210</span>
 			</a>
 
 			<a href="#">
@@ -37,22 +37,22 @@
 
 			<a href="#">
 				<i class="icon icon-github">&#xf113;</i>
-				<span class="text">github.com/VJAI</span>
+				<span class="text">github.com/janeroe</span>
 			</a>
 
 			<a href="#">
 				<i class="icon icon-stackoverflow">&#xf16c;</i>
-				<span class="text">VJAI</span>
+				<span class="text">janeroe</span>
 			</a>
 		</div>
 	</div>
 
 	<section class="section intro">
-		<h2>Intro</h2>
+		<h2>About</h2>
 
 		<p>
-			Professional Business Developer with more than four years of experience in the business development process.
-			Involved in product testing, management, and development of new business opportunities.
+			Expert in front-end development with more than 10 years of experience in providing cutting-edge solutions to business problems
+			for top companies like Apple, Google and Microsoft.
 		</p>
 	</section>
 
@@ -63,29 +63,25 @@
 			<div class="chip">HTML</div>
 			<div class="chip">CSS</div>
 			<div class="chip">JavaScript</div>
-			<div class="chip">.NET</div>
-			<div class="chip">C#</div>
+			<div class="chip">Angular</div>
+			<div class="chip">React</div>
+			<div class="chip">jQuery</div>
 			<div class="chip">TypeScript</div>
-			<div class="chip">HTML</div>
-			<div class="chip">CSS</div>
-			<div class="chip">JavaScript</div>
+			<div class="chip">RxJs</div>
+			<div class="chip">Ember</div>
+			<div class="chip">bootstrap</div>
+			<div class="chip">Web Components</div>
+			<div class="chip">Polymer</div>
 			<div class="chip">.NET</div>
 			<div class="chip">C#</div>
-			<div class="chip">ASP.NET</div>
-			<div class="chip">ADO.NET</div>
-			<div class="chip">Salesforce</div>
 			<div class="chip">SQL</div>
+			<div class="chip">SalesForce</div>
 			<div class="chip">ASP.NET</div>
-			<div class="chip">HTML</div>
-			<div class="chip">CSS</div>
-			<div class="chip">JavaScript</div>
-			<div class="chip">.NET</div>
-			<div class="chip">C#</div>
-			<div class="chip">ASP.NET</div>
-			<div class="chip">ADO.NET</div>
-			<div class="chip">ADO.NET</div>
-			<div class="chip">Salesforce</div>
-			<div class="chip">SQL</div>
+			<div class="chip">ASP.NET MVC</div>
+			<div class="chip">Silverlight</div>
+			<div class="chip">Java</div>
+			<div class="chip">Photoshop</div>
+			<div class="chip">Flash</div>
 		</div>
 	</section>
 
@@ -95,7 +91,7 @@
 
 		<div class="experience">
 			<div class="top-row">
-				<h3>Technical Architect, Apttus</h3>
+				<h3>Chief Architect, Apple</h3>
 
 				<div class="duration">
 					<span>05/2016</span>
@@ -118,17 +114,17 @@
 
 			<p class="manager">
 				<span>Contact:</span>
-				<span>Arvind Ramchandra, Senior Manager</span>
+				<span>Tim Cook, CEO</span>
 			</p>
 		</div>
 
 		<div class="experience">
 
 			<div class="top-row">
-				<h3>Technical Leader, Euromonitor International</h3>
+				<h3>Software Architect, Google</h3>
 
 				<div class="duration">
-					<span>04/2015</span>
+					<span>01/2012</span>
 					<span>-</span>
 					<span>04/2016</span>
 				</div>
@@ -148,18 +144,18 @@
 
 			<p class="manager">
 				<span>Contact:</span>
-				<span>Murugan, Team Lead</span>
+				<span>Vasil Denchev, Chief Software Architect</span>
 			</p>
 		</div>
 
 		<div class="experience">
 			<div class="top-row">
-				<h3>Associate Architect, Indecomm Global Services</h3>
+				<h3>Associate Architect, Microsoft</h3>
 
 				<div class="duration">
-					<span>12/2013</span>
+					<span>01/2012</span>
 					<span>-</span>
-					<span>04/2015</span>
+					<span>04/2010</span>
 				</div>
 			</div>
 
@@ -177,7 +173,7 @@
 
 			<p class="manager">
 				<span>Contact:</span>
-				<span>Rakesh Rajashekaran, PMP</span>
+				<span>Ray Ozzie, Software Architect</span>
 			</p>
 		</div>
 	</section>
@@ -187,12 +183,26 @@
 
 		<div class="education">
 			<div class="top-row">
-				<h3>The Rajaas Engineering College</h3>
+				<h3>Massachusetts Institute of Technology</h3>
 
 				<div class="duration">
-					<span>06/2000</span>
+					<span>02/2010</span>
 					<span>-</span>
-					<span>05/2004</span>
+					<span>02/2006</span>
+				</div>
+			</div>
+
+			<h4>MS Computer Science</h4>
+		</div>
+
+		<div class="education">
+			<div class="top-row">
+				<h3>Columbia University</h3>
+
+				<div class="duration">
+					<span>01/2006</span>
+					<span>-</span>
+					<span>01/2004</span>
 				</div>
 			</div>
 
@@ -201,30 +211,16 @@
 
 		<div class="education">
 			<div class="top-row">
-				<h3>Sethu Laskhmi Bai Higher Secondary School</h3>
-
-				<div class="duration">
-					<span>06/1998</span>
-					<span>-</span>
-					<span>05/2000</span>
-				</div>
-			</div>
-
-			<h4>Higher Secondary</h4>
-		</div>
-
-		<div class="education">
-			<div class="top-row">
-				<h3>ST. Mary Goretty Higher Secondary School</h3>
+				<h3>Carnegie Vanguard High School</h3>
 
 				<div class="duration">
 					<span>06/1992</span>
 					<span>-</span>
-					<span>05/2000</span>
+					<span>05/2004</span>
 				</div>
 			</div>
 
-			<h4>10th Education</h4>
+			<h4>School Education</h4>
 		</div>
 	</section>
 
@@ -232,10 +228,12 @@
 		<h2>Achievements</h2>
 
 		<ul>
-			<li>Created an application to manage appraisal process</li>
-			<li>Created a Survey Application</li>
-			<li>Auto Document Creator from Source Code</li>
-			<li>Created an UI community based on gamification</li>
+			<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+			<li>Ut enim ad minim veniam, quis nostrud exercitation</li>
+			<li>Duis aute irure dolor in reprehenderit</li>
+			<li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</li>
+			<li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat</li>
+			<li>Lorem Ipsum dolor sit amet, consectetur adipiscing</li>
 		</ul>
 	</section>
 
