--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="scrim"></div>
 
 	<div class="head">
-		<h1>Jane Roe</h1>
+		<h1>Jane&nbsp;Roe</h1>
 
 		<p>Chief Technical Architect</p>
 
@@ -94,9 +94,7 @@
 				<h3>Chief Architect, Apple</h3>
 
 				<div class="duration">
-					<span>05/2016</span>
-					<span>-</span>
-					<span>Present</span>
+					<span>05/2016</span>&nbsp;&mdash;&nbsp;<span>Present</span>
 				</div>
 			</div>
 
@@ -124,9 +122,7 @@
 				<h3>Software Architect, Google</h3>
 
 				<div class="duration">
-					<span>01/2012</span>
-					<span>-</span>
-					<span>04/2016</span>
+					<span>01/2012</span>&nbsp;&mdash;&nbsp;<span>04/2016</span>
 				</div>
 			</div>
 
@@ -153,9 +149,7 @@
 				<h3>Associate Architect, Microsoft</h3>
 
 				<div class="duration">
-					<span>01/2012</span>
-					<span>-</span>
-					<span>04/2010</span>
+					<span>01/2012</span>&nbsp;&mdash;&nbsp;<span>04/2010</span>
 				</div>
 			</div>
 
@@ -186,9 +180,7 @@
 				<h3>Massachusetts Institute of Technology</h3>
 
 				<div class="duration">
-					<span>02/2010</span>
-					<span>-</span>
-					<span>02/2006</span>
+					<span>02/2010</span>&nbsp;&mdash;&nbsp;<span>02/2006</span>
 				</div>
 			</div>
 
@@ -200,9 +192,7 @@
 				<h3>Columbia University</h3>
 
 				<div class="duration">
-					<span>01/2006</span>
-					<span>-</span>
-					<span>01/2004</span>
+					<span>01/2006</span>&nbsp;&mdash;&nbsp;<span>01/2004</span>
 				</div>
 			</div>
 
@@ -214,9 +204,7 @@
 				<h3>Carnegie Vanguard High School</h3>
 
 				<div class="duration">
-					<span>06/1992</span>
-					<span>-</span>
-					<span>05/2004</span>
+					<span>06/1992</span>&nbsp;&mdash;&nbsp;<span>05/2004</span>
 				</div>
 			</div>
 
